--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,6 @@ body::-webkit-scrollbar-thumb {
 
 header {
     width: 100%;
-    max-width: 100%;
     position: fixed;
     top: 0;
     left: 50%;
@@ -67,7 +66,6 @@ header {
     display: flex;
     animation: nav-animation;
     animation-timeline: view();
-
 }
 
 @keyframes nav-animation {
@@ -118,10 +116,10 @@ nav {
     }
 
     .menu a {
-        color: rgb(204, 204, 204);
+        color: rgb(249 249 249);
         text-decoration: none;
         margin: 0 15px;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
     .menu a:hover {
@@ -242,6 +240,14 @@ nav {
         font-size: 1.2rem;
         color: #5a5a5a;
         margin: 30px auto
+    }
+
+    img {
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+
+
     }
 }
 
@@ -526,6 +532,9 @@ footer {
         display: flex;
         align-items: end;
 
+
+
+
         h2 {
             width: 1200px;
             max-width: 100%;
@@ -552,9 +561,14 @@ footer {
     }
 
     .text-container {
-        width: 1000px;
-        max-width: 100%;
+        FONT-VARIANT: JIS90;
+        width: 1100px;
+        max-width: 90%;
         margin: auto;
+
+
+
+
 
         h1 {
             color: #3a3a3a;
@@ -653,6 +667,48 @@ footer {
             height: 350px;
             object-fit: cover;
             border-radius: 10px;
+        }
+    }
+
+    .team-container {
+
+        text-align: center;
+        max-width: var(--max-width);
+        margin: 0 auto;
+
+        h1 {
+            font: 400 2.1rem / 1.625rem "Open Sans", sans-serif;
+            color: #1a1a1a;
+            animation: card-animation;
+            animation-timeline: view();
+            animation-range: entry 0% cover 40%;
+            margin: 30px auto;
+
+        }
+
+        h2 {
+            line-height: 25px;
+            max-width: 700px;
+            font: 600 1.5rem / 1.625rem "Open Sans", sans-serif;
+            color: #3f3f3f;
+            margin: 5px 0;
+        }
+
+        h3 {
+            max-width: 700px;
+            font: 300 1.3rem / 1.625rem "Open Sans", sans-serif;
+            color: #3f3f3f;
+            margin: 5px 0;
+        }
+
+        img {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            background: #367491;
+            border-radius: 20px;
+
+
         }
     }
 }
