--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,6 +502,49 @@ nav {
         animation-range: entry 0% cover 40%;
     }
 
+    .project video {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 10px;
+        animation: card-animation;
+        animation-timeline: view();
+        animation-range: entry 0% cover 40%;
+    }
+
+    .vid-cont {
+        position: relative;
+    }
+
+    button {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        border: solid 2px;
+        backdrop-filter: blur(10px);
+        background: #33333342;
+        font-size: 1.2rem;
+        cursor: pointer;
+        color: white;
+        opacity: .7;
+        scale: .8;
+
+        &:hover {
+            backdrop-filter: blur(10px) brightness(2);
+
+        }
+
+        &:active {
+            backdrop-filter: blur(10px) brightness(0.5);
+
+        }
+
+    }
+
+
     .project p {
         padding: 10px;
         color: #53575a;
