--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
 
 @keyframes card-animation {
     0% {
-        transform: scale(0.8);
+        transform: scale(0.9);
         opacity: 0;
 
     }
@@ -51,6 +51,12 @@ body::-webkit-scrollbar-thumb {
     width: 5px;
     background: var(--prime-color);
     border-radius: 50px;
+}
+
+.d-center {
+    display: grid;
+    place-content: center;
+    color: rgb(92, 92, 92);
 }
 
 .container {
@@ -420,7 +426,7 @@ nav {
 
 .work-withus-container {
     display: flex;
-    background-color: #f8f9fa;
+    background-color: #edf6ff;
     gap: 20px;
     padding: 10px;
     margin-bottom: 40px;
@@ -498,7 +504,6 @@ nav {
         cursor: pointer;
         color: white;
         opacity: .7;
-        scale: .8;
 
         &:hover {
             backdrop-filter: blur(10px) brightness(2);
@@ -515,21 +520,27 @@ nav {
     &:hover {
         button {
             opacity: 1;
-            scale: 1;
         }
+
+        background: rgba(243, 243, 243, 0.493);
     }
 
     .image img {
         width: 100%;
         object-fit: cover;
-        border-radius: 10px;
         animation: card-animation;
         animation-timeline: view();
         animation-range: entry 0% cover 40%;
+        border-radius: 10px;
+
     }
 
     .image {
         flex: 1;
+        overflow: hidden;
+        border-radius: 10px;
+
+
     }
 
     .image video {
@@ -569,6 +580,16 @@ nav {
     .content a i {
         margin-left: 5px;
     }
+
+    &:hover {
+        img {
+            scale: 1.1;
+        }
+
+        video {
+            scale: 1.1;
+        }
+    }
 }
 
 
@@ -585,6 +606,8 @@ nav {
     max-width: var(--max-width);
     margin: 50px auto;
     padding: 20px 0;
+    background: #f7f9fd;
+    border-radius: 10px;
 
     .header {
         text-align: center;
@@ -607,8 +630,20 @@ nav {
 
     .project {
         flex: 1 300px;
-        background-color: white;
         border-radius: 10px;
+
+        &:hover {
+            background: #ffffff;
+
+            video {
+                scale: 1;
+            }
+
+            img {
+                scale: 1;
+            }
+
+        }
 
     }
 
@@ -620,20 +655,29 @@ nav {
         animation: card-animation;
         animation-timeline: view();
         animation-range: entry 0% cover 40%;
+        scale: 1.2;
     }
 
     .project video {
         width: 100%;
         height: 300px;
         object-fit: cover;
-        border-radius: 10px;
         animation: card-animation;
         animation-timeline: view();
         animation-range: entry 0% cover 40%;
+        scale: 1.2;
+
+
     }
 
     .vid-cont {
         position: relative;
+        overflow: hidden;
+        border-radius: 10px;
+
+
+
+
     }
 
     button {
@@ -940,6 +984,101 @@ footer {
     }
 }
 
+
+
+
+.testimonial-container {
+    width: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
+    i {
+        font-size: 1.3rem;
+        color: #1a1a1a;
+        cursor: pointer;
+        padding: 5px;
+
+        &:hover {
+            color: #575757;
+        }
+    }
+}
+
+.testimonial-card-cont {
+    text-align: center;
+    max-width: 800px;
+    width: 100%;
+    overflow: hidden;
+
+    height: fit-content;
+    border-radius: 10px;
+
+
+}
+
+.testimonial-card {
+    width: 0cm;
+    max-width: 800px;
+    height: 0;
+    opacity: 0;
+    scale: 0;
+    scale: 1;
+    opacity: 1;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+
+
+
+}
+
+.testimonial-card.active {
+    width: 100%;
+    max-width: 800px;
+    height: 500px;
+    scale: 1;
+    opacity: 1;
+}
+
+.testimonial-card img {
+    border-radius: 50%;
+    object-fit: cover;
+    width: 150px;
+    height: 150px;
+}
+
+.testimonial-text {
+    font-style: italic;
+    color: #555;
+    margin: 20px 0;
+    font: 500 1rem / 1.625rem "Open Sans", sans-serif;
+}
+
+.testimonial-author {
+    font: 400 1.5rem / 1.625rem "Open Sans", sans-serif;
+    color: #333;
+}
+
+.testimonial-role {
+    color: #777;
+    font: 100 1.1rem / 1.625rem "Open Sans", sans-serif;
+
+}
+
+.testimonial-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+
+
 .team-container {
 
     text-align: center;
@@ -947,6 +1086,8 @@ footer {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+
 
     .service {
         flex: 1 300px;
@@ -955,9 +1096,23 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
+        overflow: hidden;
 
 
     }
+
+
+    .services {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+
+    }
+
+
+
+
+
 
     h1 {
         font: 400 2.1rem / 1.625rem "Open Sans", sans-serif;
