--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -994,13 +994,20 @@ footer {
     justify-content: center;
 
     i {
+        width:50px;
+        height:50px;
+        display:grid;
+        place-content:center;
         font-size: 1.3rem;
         color: #1a1a1a;
         cursor: pointer;
-        padding: 5px;
+        margin:0 5px;
+        border-radius:10px;
+         
 
         &:hover {
             color: #575757;
+            background:#ebebeb;
         }
     }
 }
